# lgsf-prototype

./: README.md
bto-prototype/: .gitignore  README.md  build.sbt
bto-prototype/docs/: PAC_PROTOTYPE_REPORT.md  REAL_CAMERA_VBDS_VERIFICATION.md
bto-prototype/lgsf-bto-prototypeassembly/src/main/resources/: reference.conf
bto-prototype/lgsf-bto-prototypeassembly/src/main/scala/lgsf/btoprototypeassembly/: BtoPrototypeAssemblyHandlers.scala
bto-prototype/lgsf-bto-prototypeassembly/src/test/resources/: BtoPrototypeAssemblyStandalone.conf
bto-prototype/lgsf-bto-prototypedeploy/: README.md
bto-prototype/lgsf-bto-prototypedeploy/src/main/resources/: BtoPrototypeContainer.conf  BtoPrototypeHcdStandalone.conf  BtoPrototypeHostConfig.conf  application.conf
bto-prototype/lgsf-bto-prototypehcd/src/main/resources/: reference.conf
bto-prototype/lgsf-bto-prototypehcd/src/test/resources/: BtoPrototypeHcdStandalone.conf
bto-prototype/lgsf-pac-prototypehcd/src/main/cpp/: CMakeLists.txt  PacCameraJni.cpp
bto-prototype/lgsf-pac-prototypehcd/src/main/resources/: application.conf  enableVBDS.conf  reference.conf  simulationMode.conf  simulationModeNoVBDS.conf  simulationModeWithVBDS.conf
bto-prototype/lgsf-pac-prototypehcd/src/test/resources/: PacPrototypeHcdStandalone.conf
bto-prototype/notes/: 2026-05-15-session-summary.md  2026-05-18-session-summary.md  2026-05-19-session-summary.md
bto-prototype/project/: Common.scala  Coverage.scala  CswBuildInfo.scala  Dependencies.scala  Libs.scala  build.properties  plugins.sbt
py-bto-prototype/: .gitignore
py-bto-prototype/py-bto-prototype-hcd/src/py-bto-prototype-hcd/: BtoPrototypeHcdHandlers.py
py-bto-prototype/py-bto-prototype-hcd/src/tests/: test_commands.py
(+24 files in other folders)
